# FlowReveal

./: .gitignore  App.axaml  App.axaml.cs  CHECKLIST.md  Cargo.toml  DEVPLAN.md  FlowReveal.csproj  FlowReveal.slnx  HttpParserTest.cs  HttpParserTest.csproj  LICENSE  PLAN.md  Program.cs  README.md  TestProgram.cs  ViewLocator.cs  app.manifest  index.html  package.json  pnpm-lock.yaml  test_start.ps1  tsconfig.tsbuildinfo  vite.config.ts
.trae/specs/flowreveal-network-capture/: checklist.md  spec.md  tasks.md
.trae/specs/flowreveal_wfp_driver/: checklist.md  spec.md  tasks.md
.trae/specs/http-debugger/: checklist.md  spec.md  tasks.md
.trae/specs/implement-windows-packet-capture/: checklist.md  spec.md  tasks.md
Core/Capture/: PacketBuffer.cs  PcapCaptureEngine.cs  WfpCaptureEngine.cs  WfpDefinitions.cs  WfpSession.cs
Core/Interfaces/: IFilterEngine.cs  IPacketCaptureService.cs  IProtocolParser.cs  ISessionStore.cs
Core/Models/: CaptureStatistics.cs  HttpConversation.cs  NetworkAdapter.cs  RawPacket.cs  TcpSession.cs
Core/Output/: ConsolePacketWriter.cs
Core/Parser/: HttpParser.cs  IpParser.cs  PacketParser.cs  TcpParser.cs  UdpParser.cs
Core/Session/: HttpSession.cs  TcpStreamAssembler.cs
FlowReveal.Tests/: FilterEngineTests.cs  FlowReveal.Tests.csproj  HttpParserTests.cs  IpPacketParserTests.cs  TcpReassemblerTests.cs
FlowRevealDriver/: FlowRevealDriver.c  FlowRevealDriver.h  FlowRevealDriver.inf  FlowRevealDriver.vcxproj
Helpers/: DriverHelper.cs  WinProxyHelper.cs
Logging/: LogManager.cs
Models/: CaptureSession.cs  CertificateInfo.cs  HttpHeader.cs  HttpLogEntry.cs  HttpMessage.cs  HttpTrafficRecord.cs  PacketInfo.cs  ProxyConfig.cs  SessionInfo.cs
Native/: WfpNative.cs
Services/: CaptureService.cs  CertificateService.cs  HttpParser.cs  ICertificateService.cs  IHttpParser.cs  IProxyService.cs  IWfpCaptureService.cs  LifecycleService.cs  ProxyService.cs  ServiceCollectionExtensions.cs  WfpCaptureService.cs
Services/Analysis/: TrafficAnalyzer.cs
Services/Capture/: PortForwardingService.cs  TransparentProxyService.cs  WfpInterop.cs  WfpRedirectService.cs  WfpTypes.cs
Services/Certificate/: CertificateCache.cs  CertificateGenerator.cs  RootCAInstaller.cs
Services/Export/: HarExporter.cs
Services/Filter/: FilterEngine.cs  SearchEngine.cs
Services/Http/: HttpParser.cs  TlsHandshakeParser.cs
Services/Logging/: Logger.cs
Services/Parser/: HttpDebugLogger.cs  HttpParser.cs  ProtocolParser.cs  TcpReassembler.cs
Services/Session/: SessionStore.cs
Tests/: ParserTests.cs
ViewModels/: DetailPanelViewModel.cs  FilterViewModel.cs  MainWindowViewModel.cs  SessionDetailViewModel.cs  SettingsViewModel.cs  TrafficGridViewModel.cs  ViewModelBase.cs
Views/: MainWindow.axaml  MainWindow.axaml.cs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: capture_config.rs  engine_error.rs  engine_stats.rs  har_export.rs  http_message.rs  intercept_engine.rs  lib.rs  mitm.rs  platform.rs  process_info.rs  replay.rs  storage.rs
crates/engine-core/src/divert/: diverter.rs  elevation.rs  mod.rs  nat_table.rs  packet_processor.rs  sni_parser.rs  wifi_detect.rs
crates/engine-core/src/filter/: dsl_ast.rs  dsl_matcher.rs  dsl_parser.rs  mod.rs
crates/engine-core/src/platform_integration/: api_hook.rs  mod.rs  stub.rs  windows.rs
crates/engine-core/src/protocol/: http2.rs  mod.rs  websocket.rs
crates/engine-core/src/proxy/: forward_proxy.rs  mitm_proxy.rs  mod.rs  transparent_proxy.rs  utils.rs
crates/engine-core/src/rules/: executor.rs  matcher.rs  mod.rs  presets.rs  rule_engine.rs  rule_types.rs
crates/engine-core/src/search/: mod.rs  search_engine.rs
crates/engine-core/src/stats/: mod.rs  stats_collector.rs  stats_types.rs
crates/flowreveal-app/: Cargo.toml  build.rs  tauri.conf.json
crates/flowreveal-app/icons/: icon.icns
crates/flowreveal-app/src/: events.rs  lib.rs  main.rs  state.rs
crates/flowreveal-app/src/commands/: ai.rs  analysis.rs  capture.rs  cert.rs  hook.rs  mod.rs  rules.rs  traffic.rs  vuln_scan.rs
crates/hook-dll/: Cargo.toml
crates/hook-dll/src/: lib.rs  pipe_client.rs  winhttp.rs
src/: App.tsx  main.tsx
src/hooks/: useKeyboardShortcuts.ts  useRules.ts  useTheme.ts  useTraffic.ts  useVirtualScroll.ts
src/lib/: rules-bindings.ts  tauri-bindings.ts  utils.ts
src/store/: index.ts
src/styles/: globals.css
src/types/: index.ts
(+30 files in other folders)
