[workspace]
resolver = "2"
members = [
    "crates/engine-core",
    "crates/flowreveal-app",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "s"
strip = true
panic = "abort"
