[package]
name = "engine-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
bytes = "1"
lru = "0.16"
regex = "1"
url = "2"
chrono = "0.4"
dirs = "6"

hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
http = "1"
http-body-util = "0.1"

rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
x509-parser = "0.16"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Networking_WinInet",
    "Win32_Security_Cryptography",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Rpc",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }
winreg = "0.55"
