[package]
name = "hook-dll"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
minhook-sys = "0.1"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_Networking_WinHttp",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security_Cryptography",
] }
